--- a/employeeproject/templates/admin.html
+++ b/employeeproject/templates/admin.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,28 +19,17 @@
 <body>
 
 
-
 <div class="container">
 
   <div class="row justify-content-center">
     <div class="col-md-6">
 
-        {% load crispy_forms_tags %}
 
-        <h3> Welcome To Registration Page</h3>
+        <h1> Welcome To ADMIN Page</h1>
 
-
-        <form action="{% url 'register' %}" method="post">
-            {% csrf_token %}
-
-            {{ form|crispy }}
+       <h3> {{user.username}}</h3>
 
 
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form><br>
-
-        <h5>Do you have account already?</h5>
-        <a href="{% url 'login' %}" class="btn btn-info">Login Here</a>
 
         <br><br>
 
