--- a/employeeproject/templates/employeedata.html
+++ b/employeeproject/templates/employeedata.html
@@ -24,18 +24,44 @@
   <div class="row justify-content-center">
     <div class="col-md-12">
 
+<nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+
+      <ul class="navbar-nav">
+
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+
+          {% if user.is_authenticated %}
+          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+          {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'register' %}">Register</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'login' %}">Login</a>
+        </li>
+
+          {% endif %}
+
+
+      </ul>
+    </div>
+  </div>
+</nav>
+
 
   <marquee><h1> Employee Data Page</h1></marquee>
-
-        {% if messages %}
-
-        {% for message in messages %}
-
-        <h5 class="btn btn-success"> {{ message }} </h5>
-
-        {% endfor %}
-
-        {% endif %}
 
 
         <table class="table">
