--- a/employeeproject/templates/login.html
+++ b/employeeproject/templates/login.html
@@ -24,22 +24,32 @@
   <div class="row justify-content-center">
     <div class="col-md-6">
 
-        {% load crispy_forms_tags %}
+ {% load crispy_forms_tags %}
 
-        <h3> Welcome To Registration Page</h3>
+        <h3> Welcome To Login Page</h3>
+         {% if messages %}
+
+        {% for message in messages %}
+
+        <h5 class="btn btn-success"> {{ message }} </h5>
+
+        {% endfor %}
+
+        {% endif %}
 
 
-        <form action="{% url 'register' %}" method="post">
+        <form action="{% url 'login' %}" method="post">
             {% csrf_token %}
 
             {{ form|crispy }}
 
 
           <button type="submit" class="btn btn-primary">Submit</button>
-        </form><br>
+        </form><br><br>
 
-        <h5>Do you have account already?</h5>
-        <a href="{% url 'login' %}" class="btn btn-info">Login Here</a>
+        <h5>You don't have an account?</h5>
+        <a href="{% url 'register' %}" class="btn btn-info">Sign Up Here</a>
+
 
         <br><br>
 
