department size update

--- a/employeeproject/templates/department.html
+++ b/employeeproject/templates/department.html
@@ -65,7 +65,11 @@
         </table><br>
 
          <a href="{% url 'employeedetails' %}" class="btn btn-info">ALL EMPLOYEES</a>
+
+        <a href="{% url 'home' %}" class="btn btn-info">CREATE NEW DEPARTMENT</a>
         <br><br><br>
+
+
 
 
 
