--- a/employeeproject/templates/home.html
+++ b/employeeproject/templates/home.html
@@ -25,7 +25,7 @@
     <div class="col-md-6">
 
 
-        <h1> Welcome To Home Page</h1>
+        <h1> Welcome To Home Page Where You Can Create New Department</h1>
 
 
         <form action="{% url 'home' %}" method="post">
